# erigon-seg

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-plz.yml
examples/: inspect.rs  recode.rs
src/: bloom.rs  btree.rs  eliasfano.rs  error.rs  hash.rs  lib.rs  reader.rs  salt.rs  seg.rs  stack.rs  util.rs  varint.rs
src/writer/: bitwriter.rs  bt_writer.rs  compress.rs  domain.rs  ef_builder.rs  huffman.rs  kvei_writer.rs  merge.rs  mod.rs  seg_writer.rs
tests/: real_files.rs
