[package]
name = "erigon-seg"
version = "1.0.1"
edition = "2024"
rust-version = "1.88"
description = "Read, query, write, and merge the Erigon 3 seg state file format: .kv (seg-compressed words), .bt (B-tree / Elias-Fano index), and .kvei (existence/bloom filter)."
license = "MIT"
repository = "https://github.com/KarpelesLab/erigon-seg"
keywords = ["erigon", "ethereum", "seg", "snapshot", "decompress"]
categories = ["encoding", "filesystem"]

[dependencies]
memmap2 = "0.9"

[dev-dependencies]
